# initialize_django_-boilerplate

./: .flake8  .gitignore  Makefile  README.md  dev.yml  pyproject.toml
.envs/.dev/: .db  .django
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE  ISSUE_TEMPLATE.yml
.github/workflows/: pylint.yml
docker/dev/django/: Dockerfile  entrypoint
src/: manage.py
src/accounts/: managers.py  models.py  serializers.py  urls.py  views.py
src/articles/: models.py  pagination.py  serializers.py  urls.py  views.py
src/config/: auth.py  jwt.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py
